syntax = "proto3";
package protobuf;

// protoc --go_out=plugins=grpc:. *.proto

// protobuf for elector internal, only used by master-slave mode
service Elector {
    rpc PING (MsgPING) returns (MsgPONG) {
    }
    rpc SeekVote (MsgSeekVote) returns (MsgVote) {
    }
    rpc Abdicate (MsgAbdicate) returns (MsgPromoted) {
    }
}

enum EnumRole {
    CANDIDATE = 0;
    FOLLOWER = 1;
    LEADER = 2;
}

message MsgPING {
    uint64 id = 1;
    EnumRole role = 2;
    uint64 epoch = 3;
    uint64 count = 4;
}

message MsgPONG {
    uint64 id = 1;
    EnumRole role = 2;
    uint64 epoch = 3;
    uint64 count = 4;
}

message MsgSeekVote {
    uint64 id = 1;
    EnumRole role = 2;
    uint64 epoch = 3;
    uint64 bid = 4;
}

message MsgVote {
    uint64 id = 1;
    EnumRole role = 2;
    uint64 epoch = 3;
    bool agreed = 4;
}

message MsgAbdicate {
    uint64 id = 1;
    EnumRole role = 2;
    uint64 epoch = 3;
}

message MsgPromoted {
    uint64 id = 1;
    EnumRole role = 2;
    uint64 epoch = 3;
    bool promoted = 4;
}